# maxpy-studio

./: .env.example  .firebaserc  .gitignore  LICENSE  README.md  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  render.yaml  storage.rules
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: download.py  generate.py  history.py  templates.py
backend/app/core/: extractor.py  llm.py  prompt.py  sandbox.py
backend/app/models/: firestore.py
backend/app/prompts/: system_prompt.md
backend/app/prompts/templates/: m4l_bass_synth.py  m4l_chorus.py  m4l_compressor.py  m4l_distortion.py  m4l_eq.py  m4l_hihat.py  m4l_lofi.py  m4l_mono_synth.py  m4l_reverb.py  m4l_stereo_delay.py  m4l_tremolo.py
backend/sandbox/: amxd.py
backend/tests/: test_api.py  test_extractor.py  test_prompt.py  test_sandbox.py
cli/: maxpy-cli.py
docs/superpowers/plans/: 2026-04-01-pyodide-firebase-migration.md
docs/superpowers/specs/: 2026-04-01-pyodide-firebase-migration-design.md
frontend/: .env.example  .env.production.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/templates/: m4l_hihat.py  m4l_stereo_delay.py
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ApiKeyInput.tsx  AuthScreen.tsx  Chat.tsx  CodePatchTabs.tsx  Dashboard.tsx  HistorySidebar.tsx  Onboarding.tsx  PatchGraph.css  PatchGraph.tsx  PluginList.tsx
functions/: package-lock.json  package.json
functions/prompts/: system_prompt.md
functions/src/: index.ts
(+22 files in other folders)
