[project]
name = "maxpy-studio-backend"
version = "0.1.0"
description = "Backend for MaxPy Studio — generate M4L plugins from natural language"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.40.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "firebase-admin>=6.0.0",
    "maxpylang>=0.1.0",
    "numpy>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
